--- a/en/index.html
+++ b/en/index.html
@@ -9,6 +9,7 @@
 let thisPageLang = location.pathname.split('/')[1];
 let userLang = (navigator.language) ? navigator.language : navigator.userLanguage;
 
+console.log(location.pathname);
 console.log(thisPageLang);
 console.log(userLang);
 
