--- a/en/index.html
+++ b/en/index.html
@@ -20,8 +20,8 @@ if(userLang.length > 2){
 	userLang = userLang.substring(0,2);
 }
 if(userLang !== undefined && thisPageLang !== userLang){
-	if(userLang === 'en' ) location.href = '/en/';
-	if(userLang === 'ja' ) location.href = '/';
+	if(userLang === 'en' ) location.href = '/test/en/';
+	if(userLang === 'ja' ) location.href = '/test/';
 } 
 </script>
 </body>
