--- a/index.html
+++ b/index.html
@@ -4,25 +4,45 @@
 <title></title>
 </head>
 <body>
-<script>
-//言語判定・リダイレクト
-let thisPageLang = location.pathname.split('/')[2];
-let userLang = (navigator.language) ? navigator.language : navigator.userLanguage;
-
-if(thisPageLang !== 'en'){
-	thisPageLang = "ja";
-}
-if(userLang.length > 2){
-	userLang = userLang.substring(0,2);
-}
-
-console.log(thisPageLang);
-console.log(userLang);
-
-if(userLang !== undefined && thisPageLang !== userLang){
-	if(userLang === 'en' ) location.href = '/test/en/';
-	if(userLang === 'ja' ) location.href = '/test/';
-} 
-</script>
 </body>
+</html>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- vue.js　-->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <link rel="manifest" href="manifest.json">
+    <title>PWA Sample</title>
+  </head>
+  <body>
+    <div id="app">
+        <p>{{ message }}</p>
+        <button v-on:click="reverseMessage">Reverse Message</button>
+     </div>
+    <script>
+    // service workerの登録関係
+    if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service_worker.js').then(function(registration) {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }).catch(function(err) {
+        console.log('ServiceWorker registration failed: ', err);
+    });
+    }
+    // vue.jsの設定関係
+    const app = {
+      data() {
+        return {
+          message: 'Hello Vue!'
+        }
+      },
+      methods: {
+        reverseMessage: function () {
+          this.message = this.message.split('').reverse().join('')
+        }
+      }
+    };
+    Vue.createApp(app).mount('#app');
+    </script>
+  </body>
 </html>
