PWAテスト修正

--- a/index.html
+++ b/index.html
@@ -10,39 +10,38 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- vue.js　-->
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json">
     <title>PWA Sample</title>
   </head>
   <body>
-    <div id="app">
-        <p>{{ message }}</p>
-        <button v-on:click="reverseMessage">Reverse Message</button>
-     </div>
+    PWAのオフライン表示テスト（フロントページ）
+    <br>
+    <img src="/icon.png">
     <script>
-    // service workerの登録関係
-    if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service_worker.js').then(function(registration) {
-        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-    }).catch(function(err) {
-        console.log('ServiceWorker registration failed: ', err);
-    });
-    }
-    // vue.jsの設定関係
-    const app = {
-      data() {
-        return {
-          message: 'Hello Vue!'
-        }
-      },
-      methods: {
-        reverseMessage: function () {
-          this.message = this.message.split('').reverse().join('')
-        }
+      // service workerの登録関係
+      if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service_worker.js').then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch(function(err) {
+          console.log('ServiceWorker registration failed: ', err);
+      });
       }
-    };
-    Vue.createApp(app).mount('#app');
-    </script>
+      // vue.jsの設定関係
+      const app = {
+        data() {
+          return {
+            message: 'Hello Vue!'
+          }
+        },
+        methods: {
+          reverseMessage: function () {
+            this.message = this.message.split('').reverse().join('')
+          }
+        }
+      };
+      Vue.createApp(app).mount('#app');
+  
+      </script>
   </body>
 </html>
