--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     PWAのオフライン表示テスト（フロントページ）
     <br>
-    <img src="img/icon.png">
+    <img src="img/logo.png">
     <script>
       // service workerの登録関係
       if ('serviceWorker' in navigator) {
